wix-storybook-utils: Fix error overflow in compact mode (#845)
* Fix error overflow in compact mode

* Fix toggles and error for non-compact mode

--- a/packages/wix-storybook-utils/src/LiveCodeExample/index.scss
+++ b/packages/wix-storybook-utils/src/LiveCodeExample/index.scss
@@ -222,6 +222,7 @@
 
 .error {
   position: absolute;
+  top: 0;
   bottom: 0;
   left: 0;
   right: 0;
@@ -231,8 +232,7 @@
   white-space: pre;
 
   .compact & {
-    top: 0;
-    height: 100%;
     overflow: auto;
+    border-radius: 6px;
   }
 }
